--- a/src/components/UI/Layout/Navigation/SideDrawer/SideDrawer.module.css
+++ b/src/components/UI/Layout/Navigation/SideDrawer/SideDrawer.module.css
@@ -45,13 +45,11 @@
 }
 
 .DrawerOpen {
-  height: calc(100% - 58px);
   width: 203px;
   transition: width 255ms !important;
 }
 
 .DrawerClose {
-  height: calc(100% - 58px);
   transition: width 255ms !important;
   width: 92px;
   overflow-x: hidden;
